# L3_GL_etudiant

TP_compilation/imshow/: CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~
TP_compilation/play_video/: CMakeLists.txt  CMakeLists.txt~
TP_compilation/sayHello/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  clean.sh  clean.sh~  cmake_install.cmake  compile.sh  compile.sh~  sayHello.out
TP_documentation/drunk_player/: README.md
